--- a/index.html
+++ b/index.html
@@ -156,9 +156,169 @@
 
     <!--==================== SKILLS ====================-->
 
-    //43.16
     <section class="skills section" id="skills">
+      <h2 class="section__title">Skills</h2>
+      <span class="section__subtitle"> My technical level</span>
+      <div class="skills__container container grid">
+        <div>
+          <!--==================== SKILLS Front-END ====================-->
+          <div class="skills__content skills__open">
+            <div class="skills__header">
+              <i class="uil uil-brackets-curly skills__icon"></i>
+              <div>
+                <h1 class="skills__title"> Frontend developer</h1>
+                <span class="skills__subtitle">Almost 2 years</span>
+              </div>
+              <i class="uil uil-angle-down skills__arrow"></i>
+            </div>
+            <div class="skills__list grid">
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    HTML & CSS
+                  </h3>
+                  <span class="skills__number"> 90% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__html"></span>
+                </div>
+              </div>
 
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    Javascript
+                  </h3>
+                  <span class="skills__number"> 80% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__javascript"></span>
+                </div>
+              </div>
+
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    ReactJs
+                  </h3>
+                  <span class="skills__number"> 80% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__react"></span>
+                </div>
+              </div>
+
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    Typescript
+                  </h3>
+                  <span class="skills__number"> 50% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__typescript"></span>
+                </div>
+              </div>
+
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    Next.js
+                  </h3>
+                  <span class="skills__number"> 50% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__next"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--==================== SKILLS Back-END ====================-->
+          <div class="skills__content skills__close">
+            <div class="skills__header">
+              <i class="uil uil-server-network skills__icon"></i>
+              <div>
+                <h1 class="skills__title"> Back-end developer</h1>
+                <span class="skills__subtitle">less then 1 years</span>
+              </div>
+              <i class="uil uil-angle-down skills__arrow"></i>
+            </div>
+            <div class="skills__list grid">
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    Node.js
+                  </h3>
+                  <span class="skills__number"> 50% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__node"></span>
+                </div>
+              </div>
+
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    SQL
+                  </h3>
+                  <span class="skills__number"> 60% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__sql"></span>
+                </div>
+              </div>
+
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    Postgresql
+                  </h3>
+                  <span class="skills__number"> 60% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__postgresql"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--==================== SKILLS Orga/Com ====================-->
+          <div class="skills__content skills__close">
+            <div class="skills__header">
+              <i class="uil uil-briefcase skills__icon"></i>
+              <div>
+                <h1 class="skills__title"> Organisation & Communication</h1>
+              </div>
+              <i class="uil uil-angle-down skills__arrow"></i>
+            </div>
+            <div class="skills__list grid">
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    Git/Github/Gitlab
+                  </h3>
+                  <span class="skills__number"> 80% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__git"></span>
+                </div>
+              </div>
+
+              <div class="skills_data">
+                <div class="skills__titles">
+                  <h3 class="skills__name">
+                    Jira/Trello
+                  </h3>
+                  <span class="skills__number"> 80% </span>
+                </div>
+                <div class="skills__bar">
+                  <span class="skills__percentage skills__jira"></span>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--==================== QUALIFICATION ====================-->
