--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="home__container container grid">
         <div class="home__content grid">
           <div class="home__social">
-            <a href="https://www.linkedin.com/in/clementchar/" target="_blank" home__social-icon">
+            <a href="https://www.linkedin.com/in/clementchar/" target="_blank" class="home__social-icon">
               <i class="uil uil-linkedin-alt"></i>
             </a>
             <a href="https://twitter.com/Cle_char" target="_blank" class="home__social-icon">
@@ -101,7 +101,7 @@
             Creation and integration, web design and development knowledge and experience, producing quality work.
           </p>
           <a href="#contact" class="button button--flex">
-            Contact Me <i class="uil uil-message"></i>
+            Contact Me <i class="uil uil-message button__icon"></i>
           </a>
         </div>
         <div class="home__scroll">
@@ -239,7 +239,7 @@
               <i class="uil uil-server-network skills__icon"></i>
               <div>
                 <h1 class="skills__title"> Back-end developer</h1>
-                <span class="skills__subtitle">less then 1 years</span>
+                <span class="skills__subtitle">less then 1 year</span>
               </div>
               <i class="uil uil-angle-down skills__arrow"></i>
             </div>
@@ -324,11 +324,226 @@
     <!--==================== QUALIFICATION ====================-->
     <section class="qualification section">
 
+      <h2 class="section__title">
+        Qualification
+      </h2>
+      <span class="section__subtitle">My personal journey</span>
+
+      <div class="qualification__container container">
+        <div class="qualification__tabs">
+          <div class="qualification__button button--flex qualification__active" data-target="#education">
+            <i class=" uil uil-graduation-cap qualification__icon"></i>
+            Education
+          </div>
+          <div class="qualification__button button--flex" data-target="#work">
+            <i class="uil uil-briefcase nav__icon qualification__icon"></i>
+            Work Experience
+          </div>
+        </div>
+        <div class="qualification__sections">
+          <!--==================== QUALIFICATION Content 1  ====================-->
+          <div class="qualification__content qualification__active" data-content id="education">
+            <!--==================== QUALIFICATION 1 ====================-->
+            <div class="qualification__data">
+              <div>
+                <h3 class="qualification__title">
+                  Web development training
+                </h3>
+                <span class="qualification__subtitle"> O'Clock </span>
+                <div class="class qualification__calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  01/2021 - 06/2021
+                </div>
+              </div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+            </div>
+
+            <!--==================== QUALIFICATION 2 ====================-->
+            <div class="qualification__data">
+              <div></div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+              <div>
+                <h3 class="qualification__title">
+                  Advanced Technician’s certificate
+                </h3>
+                <span class="qualification__subtitle"> Redon-France </span>
+                <div class="class qualification__calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2013 - 2015
+                </div>
+              </div>
+            </div>
+
+            <!--==================== QUALIFICATION 3 ====================-->
+            <div class="qualification__data">
+
+              <div>
+                <h3 class="qualification__title">
+                  Economic Baccalaureate
+                </h3>
+                <span class="qualification__subtitle"> Nantes - France </span>
+                <div class="class qualification__calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2013 - 2015
+                </div>
+              </div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <!--                 <span class="qualification__line"></span>
+ -->
+              </div>
+            </div>
+          </div>
+
+
+          <!--==================== QUALIFICATION Content 2  ====================-->
+
+          <div class="qualification__content" data-content id="work">
+            <!--==================== QUALIFICATION 1 ====================-->
+            <div class="qualification__data">
+              <div></div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <span class="qualification__line"></span>
+              </div>
+              <div>
+                <h3 class="qualification__title">
+                  Front-end developer
+                </h3>
+                <span class="qualification__subtitle"> Origins Digital </span>
+                <div class="class qualification__calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  08/2021 - 02/2022
+                </div>
+              </div>
+
+            </div>
+
+            <!--==================== QUALIFICATION 2 ====================-->
+            <div class="qualification__data">
+              <div>
+                <h3 class="qualification__title">
+                  Creation of the "Riddle Virtual Bar"
+                </h3>
+                <span class="qualification__subtitle"> Crowdfunding, market research, business plan, search and
+                  negociation for a commercial place to settle down, social Network communication, bank canvass
+                </span>
+                <div class="class qualification__calendar">
+                  <i class="uil uil-calendar-alt"></i>
+                  2018 - 2019
+                </div>
+              </div>
+              <div>
+                <span class="qualification__rounder"></span>
+                <!-- <span class=  "qualification__line"></span> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--==================== SERVICES ====================-->
     <section class="services section" id="services">
+      <h2 class="section__title">Services</h2>
+      <span class="section__subtitle">What I offer</span>
+      <div class="services__container container grid">
+        <!--==================== SERVICES 1 ====================-->
+        <div class="services__content">
+          <i class="uil uil-web-grid services__icon"> </i>
+          <h3 class="services__title">Web <br> Designer </h3>
+          <span class="button button--flex button--small button--link services__button">
+            View More
+            <i class="uil uil-arrow-right button__icon"></i>
+          </span>
+          <div class="services__modal">
+            <div class="services__modal-content">
+              <h4 class="services__modal-title">Ui/Ux <br> Designer </h4>
+              <i class="uil uil-times services__modal-close"></i>
+              <ul class="services__modal-services grid">
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> I create wireFrames before coding. </p>
+                </li>
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> I'm listening my custommer's visual need. </p>
+                </li>
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> I'm listening if my client has visual changes in mind afterward. </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
 
+        <!--==================== SERVICES 2 ====================-->
+        <div class="services__content">
+          <i class="uil uil-arrow services__icon"></i>
+          <h3 class="services__title"> Front-end <br> Developper </h3>
+          <span class="button button--flex button--small button--link services__button">
+            View More
+            <i class="uil uil-arrow-right button__icon"></i>
+          </span>
+          <div class="services__modal">
+            <div class="services__modal-content">
+              <h4 class="services__modal-title">Front-end <br> Developper </h4>
+              <i class="uil uil-times services__modal-close"></i>
+              <ul class="services__modal-services grid">
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> I develop the user/back-office interface. </p>
+                </li>
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> Responsive web page development. </p>
+                </li>
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> Visual interactions using pure CSS & libraries. </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!--==================== SERVICES 3 ====================-->
+        <div class="services__content">
+          <i class="uil uil-database services__icon"></i>
+          <h3 class="services__title"> Back-end <br> Developper </h3>
+          <span class="button button--flex button--small button--link services__button">
+            View More
+            <i class="uil uil-arrow-right button__icon"></i>
+          </span>
+          <div class="services__modal">
+            <div class="services__modal-content">
+              <h4 class="services__modal-title">Back-End <br> Developper </h4>
+              <i class="uil uil-times services__modal-close"></i>
+              <ul class="services__modal-services grid">
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> I develop database with NodeJs and ExpressJS</p>
+                </li>
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> Basic "CRUD".</p>
+                </li>
+                <li class="services__modal-service">
+                  <i class="uil uil-check-circle services__modal-icon"></i>
+                  <p> Authentication system </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--==================== PORTFOLIO ====================-->
